@@ -18,6 +18,7 @@ define libc6-dev-ppc64_extra_pkg_install
 mkdir -p debian/libc6-dev-ppc64/usr/include
 ln -s powerpc-linux-gnu/bits debian/libc6-dev-ppc64/usr/include/
 ln -s powerpc-linux-gnu/gnu debian/libc6-dev-ppc64/usr/include/
+ln -s powerpc-linux-gnu/fpu_control.h debian/libc6-dev-ppc64/usr/include/
 
 mkdir -p debian/libc6-dev-ppc64/usr/include/powerpc-linux-gnu/gnu
 cp -a debian/tmp-ppc64/usr/include/gnu/stubs-64.h \
