@@ -16,6 +16,7 @@ define libc6-dev-s390x_extra_pkg_install
 mkdir -p debian/libc6-dev-s390x/usr/include
 ln -s s390-linux-gnu/bits debian/libc6-dev-s390x/usr/include/
 ln -s s390-linux-gnu/gnu debian/libc6-dev-s390x/usr/include/
+ln -s s390-linux-gnu/fpu_control.h debian/libc6-dev-s390x/usr/include/
 
 mkdir -p debian/libc6-dev-s390x/usr/include/s390-linux-gnu/gnu
 cp -a debian/tmp-s390x/usr/include/gnu/stubs-64.h \
