@@ -18,6 +18,7 @@ define libc6-dev-sparc64_extra_pkg_install
 mkdir -p debian/libc6-dev-sparc64/usr/include
 ln -s sparc-linux-gnu/bits debian/libc6-dev-sparc64/usr/include/
 ln -s sparc-linux-gnu/gnu debian/libc6-dev-sparc64/usr/include/
+ln -s sparc-linux-gnu/fpu_control.h debian/libc6-dev-sparc64/usr/include/
 
 mkdir -p debian/libc6-dev-sparc64/usr/include/sparc-linux-gnu/gnu
 cp -a debian/tmp-sparc64/usr/include/gnu/stubs-64.h \
