@@ -5,6 +5,7 @@ eglibc (2.13-14) UNRELEASED; urgency=low
     #636116.
   * Fix the biarch symlinks on mipsel, pointing them to the right multiarch
     directory.
+  * Include a symlink for fpu_control in biarch packages.  Closes: #635685.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/submitted-sysvshm.diff: Fix shm creation: do not create
